@@ -71,202 +71,202 @@ import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 @RequestMapping(API_2 + CONTENT)
 public class ContentController {
 
-    private final ContentService contentService;
-    private final DependencyService dependencyService;
+	private final ContentService contentService;
+	private final DependencyService dependencyService;
 
-    //TODO: Migrate logic to new content service
-    private final ClipboardService clipboardService;
+	//TODO: Migrate logic to new content service
+	private final ClipboardService clipboardService;
 
-    @ConstructorProperties({"contentService", "dependencyService", "clipboardService"})
-    public ContentController(ContentService contentService, DependencyService dependencyService, ClipboardService clipboardService) {
-        this.contentService = contentService;
-        this.dependencyService = dependencyService;
-        this.clipboardService = clipboardService;
-    }
+	@ConstructorProperties({"contentService", "dependencyService", "clipboardService"})
+	public ContentController(ContentService contentService, DependencyService dependencyService, ClipboardService clipboardService) {
+		this.contentService = contentService;
+		this.dependencyService = dependencyService;
+		this.clipboardService = clipboardService;
+	}
 
-    @GetMapping(value = EXISTS, produces = APPLICATION_JSON_VALUE)
-    public ResultOne<Boolean> contentExists(@NotEmpty @ValidSiteId @RequestParam String siteId,
-                                            @ValidExistingContentPath @ValidateSecurePathParam @RequestParam String path)
-            throws SiteNotFoundException {
-        var result = new ResultOne<Boolean>();
-        result.setEntity(RESULT_KEY_EXISTS, contentService.contentExists(siteId, path));
-        result.setResponse(OK);
-        return result;
-    }
+	@GetMapping(value = EXISTS, produces = APPLICATION_JSON_VALUE)
+	public ResultOne<Boolean> contentExists(@NotEmpty @ValidSiteId @RequestParam String siteId,
+						@ValidExistingContentPath @ValidateSecurePathParam @RequestParam String path)
+		throws SiteNotFoundException {
+		var result = new ResultOne<Boolean>();
+		result.setEntity(RESULT_KEY_EXISTS, contentService.contentExists(siteId, path));
+		result.setResponse(OK);
+		return result;
+	}
 
-    @GetMapping(LIST_QUICK_CREATE_CONTENT)
-    public ResultList<QuickCreateItem> listQuickCreateContent(@ValidSiteId @RequestParam(name = "siteId") String siteId)
-            throws SiteNotFoundException {
-        List<QuickCreateItem> items = contentService.getQuickCreatableContentTypes(siteId);
-        ResultList<QuickCreateItem> result = new ResultList<>();
-        result.setResponse(OK);
-        result.setEntities(RESULT_KEY_ITEMS, items);
-        return result;
-    }
+	@GetMapping(LIST_QUICK_CREATE_CONTENT)
+	public ResultList<QuickCreateItem> listQuickCreateContent(@ValidSiteId @RequestParam(name = "siteId") String siteId)
+		throws SiteNotFoundException {
+		List<QuickCreateItem> items = contentService.getQuickCreatableContentTypes(siteId);
+		ResultList<QuickCreateItem> result = new ResultList<>();
+		result.setResponse(OK);
+		result.setEntities(RESULT_KEY_ITEMS, items);
+		return result;
+	}
 
-    @PostMapping(GET_DELETE_PACKAGE)
-    public ResultOne<Map<String, List<String>>> getDeletePackage(@RequestBody @Valid GetDeletePackageRequestBody request) throws SiteNotFoundException {
-        List<String> childItems = contentService.getChildItems(request.getSiteId(), request.getPaths());
-        List<String> dependentItems = dependencyService.getDependentPaths(request.getSiteId(), request.getPaths());
-        ResultOne<Map<String, List<String>>> result = new ResultOne<>();
-        result.setResponse(OK);
-        Map<String, List<String>> items = new HashMap<>();
-        items.put(RESULT_KEY_CHILD_ITEMS, childItems);
-        items.put(RESULT_KEY_DEPENDENT_ITEMS, dependentItems);
-        result.setEntity(RESULT_KEY_ITEMS, items);
-        return result;
-    }
+	@PostMapping(GET_DELETE_PACKAGE)
+	public ResultOne<Map<String, List<String>>> getDeletePackage(@RequestBody @Valid GetDeletePackageRequestBody request) throws SiteNotFoundException {
+		List<String> childItems = contentService.getChildItems(request.getSiteId(), request.getPaths());
+		List<String> dependentItems = dependencyService.getDependentPaths(request.getSiteId(), request.getPaths());
+		ResultOne<Map<String, List<String>>> result = new ResultOne<>();
+		result.setResponse(OK);
+		Map<String, List<String>> items = new HashMap<>();
+		items.put(RESULT_KEY_CHILD_ITEMS, childItems);
+		items.put(RESULT_KEY_DEPENDENT_ITEMS, dependentItems);
+		result.setEntity(RESULT_KEY_ITEMS, items);
+		return result;
+	}
 
-    @PostMapping(value = DELETE, consumes = APPLICATION_JSON_VALUE)
-    public Result delete(@RequestBody @Validated DeleteRequestBody deleteRequestBody)
-            throws UserNotFoundException, ServiceLayerException, AuthenticationException {
-        List<String> items = new ArrayList<>(deleteRequestBody.getItems());
-        if (isNotEmpty(deleteRequestBody.getOptionalDependencies())) {
-            items.addAll(deleteRequestBody.getOptionalDependencies());
-        }
+	@PostMapping(value = DELETE, consumes = APPLICATION_JSON_VALUE)
+	public Result delete(@RequestBody @Validated DeleteRequestBody deleteRequestBody)
+		throws UserNotFoundException, ServiceLayerException, AuthenticationException {
+		List<String> items = new ArrayList<>(deleteRequestBody.getItems());
+		if (isNotEmpty(deleteRequestBody.getOptionalDependencies())) {
+			items.addAll(deleteRequestBody.getOptionalDependencies());
+		}
 
-        contentService.deleteContent(deleteRequestBody.getSiteId(),
-                items, deleteRequestBody.getTitle(),
-                deleteRequestBody.getComment());
-        var result = new Result();
-        result.setResponse(OK);
-        return result;
-    }
+		contentService.deleteContent(deleteRequestBody.getSiteId(),
+			items, deleteRequestBody.getTitle(),
+			deleteRequestBody.getComment());
+		var result = new Result();
+		result.setResponse(OK);
+		return result;
+	}
 
-    @PostMapping(value = GET_CHILDREN_BY_PATHS, produces = APPLICATION_JSON_VALUE)
-    public Result getChildrenByPaths(@PathVariable @ValidSiteId String siteId, @Valid @RequestBody GetChildrenBulkRequest request)
-            throws ServiceLayerException, UserNotFoundException {
-        Map<String, PathParams> paramsMap = request.getPaths().stream()
-                .collect(toMap(PathParams::getPath, identity()));
-        GetChildrenByPathsBulkResult children = contentService.getChildrenByPaths(siteId,
-                new ArrayList<>(paramsMap.keySet()), paramsMap);
-        Result result = UnwrappedResult.of(children);
-        result.setResponse(OK);
-        return result;
-    }
+	@PostMapping(value = GET_CHILDREN_BY_PATHS, produces = APPLICATION_JSON_VALUE)
+	public Result getChildrenByPaths(@PathVariable @ValidSiteId String siteId, @Valid @RequestBody GetChildrenBulkRequest request)
+		throws ServiceLayerException, UserNotFoundException {
+		Map<String, PathParams> paramsMap = request.getPaths().stream()
+			.collect(toMap(PathParams::getPath, identity()));
+		GetChildrenByPathsBulkResult children = contentService.getChildrenByPaths(siteId,
+			new ArrayList<>(paramsMap.keySet()), paramsMap);
+		Result result = UnwrappedResult.of(children);
+		result.setResponse(OK);
+		return result;
+	}
 
-    @GetMapping(value = GET_DESCRIPTOR, produces = APPLICATION_JSON_VALUE)
-    public ResultOne<String> getDescriptor(@NotEmpty @ValidSiteId @RequestParam String siteId,
-                                           @ValidExistingContentPath @ValidateSecurePathParam @RequestParam String path,
-                                           @RequestParam(required = false, defaultValue = "false") boolean flatten) throws
-            ContentNotFoundException, SiteNotFoundException {
-        Document descriptor = contentService.getItemDescriptor(siteId, path, flatten);
-        var result = new ResultOne<String>();
-        result.setResponse(OK);
-        result.setEntity(RESULT_KEY_XML, descriptor.asXML());
-        return result;
-    }
+	@GetMapping(value = GET_DESCRIPTOR, produces = APPLICATION_JSON_VALUE)
+	public ResultOne<String> getDescriptor(@NotEmpty @ValidSiteId @RequestParam String siteId,
+					       @ValidExistingContentPath @ValidateSecurePathParam @RequestParam String path,
+					       @RequestParam(required = false, defaultValue = "false") boolean flatten) throws
+		ContentNotFoundException, SiteNotFoundException {
+		Document descriptor = contentService.getItemDescriptor(siteId, path, flatten);
+		var result = new ResultOne<String>();
+		result.setResponse(OK);
+		result.setEntity(RESULT_KEY_XML, descriptor.asXML());
+		return result;
+	}
 
-    @PostMapping(value = PASTE_ITEMS, produces = APPLICATION_JSON_VALUE)
-    public ResultList<String> pasteItems(@Valid @RequestBody PasteRequest request) throws Exception {
-        var result = new ResultList<String>();
-        result.setResponse(OK);
-        result.setEntities(RESULT_KEY_ITEMS,
-                clipboardService.pasteItems(request.getSiteId(), request.getOperation(),
-                        request.getTargetPath(), request.getItem()));
+	@PostMapping(value = PASTE_ITEMS, produces = APPLICATION_JSON_VALUE)
+	public ResultList<String> pasteItems(@Valid @RequestBody PasteRequest request) throws Exception {
+		var result = new ResultList<String>();
+		result.setResponse(OK);
+		result.setEntities(RESULT_KEY_ITEMS,
+			clipboardService.pasteItems(request.getSiteId(), request.getOperation(),
+				request.getTargetPath(), request.getItem()));
 
-        return result;
-    }
+		return result;
+	}
 
-    @PostMapping(value = DUPLICATE_ITEM, produces = APPLICATION_JSON_VALUE)
-    public ResultOne<String> duplicateItem(@Valid @RequestBody DuplicateRequest request) throws Exception {
-        var result = new ResultOne<String>();
-        result.setResponse(OK);
-        result.setEntity(RESULT_KEY_ITEM,
-                clipboardService.duplicateItem(request.getSiteId(), request.getPath()));
+	@PostMapping(value = DUPLICATE_ITEM, produces = APPLICATION_JSON_VALUE)
+	public ResultOne<String> duplicateItem(@Valid @RequestBody DuplicateRequest request) throws Exception {
+		var result = new ResultOne<String>();
+		result.setResponse(OK);
+		result.setEntity(RESULT_KEY_ITEM,
+			clipboardService.duplicateItem(request.getSiteId(), request.getPath()));
 
-        return result;
-    }
+		return result;
+	}
 
-    @GetMapping(value = ITEM_BY_PATH, produces = APPLICATION_JSON_VALUE)
-    public ResultOne<DetailedItem> getItemByPath(@ValidSiteId
-                                      @RequestParam(value = REQUEST_PARAM_SITEID) String siteId,
-                                                 @ValidExistingContentPath
-                                      @RequestParam(value = REQUEST_PARAM_PATH) String path,
-                                                 @RequestParam(value = REQUEST_PARAM_PREFER_CONTENT, required = false,
-                                              defaultValue = "false") boolean preferContent)
-            throws ServiceLayerException, UserNotFoundException {
-        DetailedItem detailedItem = contentService.getItemByPath(siteId, path, preferContent);
-        ResultOne<DetailedItem> result = new ResultOne<>();
-        result.setEntity(RESULT_KEY_ITEM, detailedItem);
-        result.setResponse(OK);
-        return result;
-    }
+	@GetMapping(value = ITEM_BY_PATH, produces = APPLICATION_JSON_VALUE)
+	public ResultOne<DetailedItem> getItemByPath(@ValidSiteId
+						     @RequestParam(value = REQUEST_PARAM_SITEID) String siteId,
+						     @ValidExistingContentPath
+						     @RequestParam(value = REQUEST_PARAM_PATH) String path,
+						     @RequestParam(value = REQUEST_PARAM_PREFER_CONTENT, required = false,
+							     defaultValue = "false") boolean preferContent)
+		throws ServiceLayerException, UserNotFoundException {
+		DetailedItem detailedItem = contentService.getItemByPath(siteId, path, preferContent);
+		ResultOne<DetailedItem> result = new ResultOne<>();
+		result.setEntity(RESULT_KEY_ITEM, detailedItem);
+		result.setResponse(OK);
+		return result;
+	}
 
-    @PostMapping(value = SANDBOX_ITEMS_BY_PATH, produces = APPLICATION_JSON_VALUE)
-    public GetSandboxItemsByPathResult getSandboxItemsByPath(@RequestBody @Valid GetSandboxItemsByPathRequestBody request)
-            throws ServiceLayerException, UserNotFoundException {
-        String siteId = request.getSiteId();
-        Collection<String> missing = Collections.emptyList();
-        List<String> paths = request.getPaths();
-        boolean preferContent = request.isPreferContent();
-        List<SandboxItem> sandboxItems = contentService.getSandboxItemsByPath(siteId, paths, preferContent);
+	@PostMapping(value = SANDBOX_ITEMS_BY_PATH, produces = APPLICATION_JSON_VALUE)
+	public GetSandboxItemsByPathResult getSandboxItemsByPath(@RequestBody @Valid GetSandboxItemsByPathRequestBody request)
+		throws ServiceLayerException, UserNotFoundException {
+		String siteId = request.getSiteId();
+		Collection<String> missing = Collections.emptyList();
+		List<String> paths = request.getPaths();
+		boolean preferContent = request.isPreferContent();
+		List<SandboxItem> sandboxItems = contentService.getSandboxItemsByPath(siteId, paths, preferContent);
 
-        if (CollectionUtils.isEmpty(sandboxItems) || paths.size() != sandboxItems.size()) {
-            List<String> found = sandboxItems.stream().map(SandboxItem::getPath).collect(Collectors.toList());
-            if (preferContent) {
-                found.addAll(sandboxItems.stream().map(si -> StringUtils.replace(si.getPath(),
-                        FILE_SEPARATOR + INDEX_FILE, "")).toList());
-            }
-            missing = CollectionUtils.subtract(paths, found);
-        }
+		if (CollectionUtils.isEmpty(sandboxItems) || paths.size() != sandboxItems.size()) {
+			List<String> found = sandboxItems.stream().map(SandboxItem::getPath).collect(Collectors.toList());
+			if (preferContent) {
+				found.addAll(sandboxItems.stream().map(si -> StringUtils.replace(si.getPath(),
+					FILE_SEPARATOR + INDEX_FILE, "")).toList());
+			}
+			missing = CollectionUtils.subtract(paths, found);
+		}
 
-        GetSandboxItemsByPathResult result = new GetSandboxItemsByPathResult();
-        result.setEntities(RESULT_KEY_ITEMS, sandboxItems);
-        result.setMissingItems(missing);
-        result.setResponse(OK);
-        return result;
-    }
+		GetSandboxItemsByPathResult result = new GetSandboxItemsByPathResult();
+		result.setEntities(RESULT_KEY_ITEMS, sandboxItems);
+		result.setMissingItems(missing);
+		result.setResponse(OK);
+		return result;
+	}
 
-    @PostMapping(ITEM_LOCK_BY_PATH)
-    public Result itemLockByPath(@RequestBody @Valid LockItemByPathRequest request)
-            throws UserNotFoundException, ServiceLayerException {
-        contentService.lockContent(request.getSiteId(), request.getPath());
-        Result result = new Result();
-        result.setResponse(OK);
-        return result;
-    }
+	@PostMapping(ITEM_LOCK_BY_PATH)
+	public Result itemLockByPath(@RequestBody @Valid LockItemByPathRequest request)
+		throws UserNotFoundException, ServiceLayerException {
+		contentService.lockContent(request.getSiteId(), request.getPath());
+		Result result = new Result();
+		result.setResponse(OK);
+		return result;
+	}
 
-    @PostMapping(ITEM_UNLOCK_BY_PATH)
-    public Result itemUnlockByPath(@RequestBody @Valid UnlockItemByPathRequest request)
-            throws ContentNotFoundException, SiteNotFoundException {
-        contentService.unlockContent(request.getSiteId(), request.getPath());
-        Result result = new Result();
-        result.setResponse(OK);
-        return result;
-    }
+	@PostMapping(ITEM_UNLOCK_BY_PATH)
+	public Result itemUnlockByPath(@RequestBody @Valid UnlockItemByPathRequest request)
+		throws ContentNotFoundException, SiteNotFoundException {
+		contentService.unlockContent(request.getSiteId(), request.getPath());
+		Result result = new Result();
+		result.setResponse(OK);
+		return result;
+	}
 
-    @Valid
-    @GetMapping(GET_CONTENT_BY_COMMIT_ID)
-    public ResponseEntity<Resource> getContentByCommitId(@ValidSiteId @RequestParam(value = REQUEST_PARAM_SITEID) String siteId,
-                                                         @ValidExistingContentPath @RequestParam(value = REQUEST_PARAM_PATH) String path,
-                                                         @EsapiValidatedParam(type = ALPHANUMERIC) @RequestParam(value = REQUEST_PARAM_COMMIT_ID) String commitId)
-            throws ServiceLayerException, UserNotFoundException {
-        Resource resource = contentService.getContentByCommitId(siteId, path, commitId).orElseThrow();
+	@Valid
+	@GetMapping(GET_CONTENT_BY_COMMIT_ID)
+	public ResponseEntity<Resource> getContentByCommitId(@ValidSiteId @RequestParam(value = REQUEST_PARAM_SITEID) String siteId,
+							     @ValidExistingContentPath @RequestParam(value = REQUEST_PARAM_PATH) String path,
+							     @EsapiValidatedParam(type = ALPHANUMERIC) @RequestParam(value = REQUEST_PARAM_COMMIT_ID) String commitId)
+		throws ServiceLayerException, UserNotFoundException {
+		Resource resource = contentService.getContentByCommitId(siteId, path, commitId).orElseThrow();
 
-        String mimeType = StudioUtils.getMimeType(path);
-        return ResponseEntity
-                .ok()
-                .contentType(MediaType.parseMediaType(mimeType))
-                .body(resource);
-    }
+		String mimeType = StudioUtils.getMimeType(path);
+		return ResponseEntity
+			.ok()
+			.contentType(MediaType.parseMediaType(mimeType))
+			.body(resource);
+	}
 
-    @PostMapping(value = RENAME, consumes = APPLICATION_JSON_VALUE)
-    public Result rename(@Valid @RequestBody RenameRequestBody renameRequestBody)
-            throws AuthenticationException, UserNotFoundException, ServiceLayerException, ValidationException {
-        contentService.renameContent(renameRequestBody.getSiteId(), renameRequestBody.getPath(), renameRequestBody.getName());
-        var result = new Result();
-        result.setResponse(OK);
-        return result;
-    }
+	@PostMapping(value = RENAME, consumes = APPLICATION_JSON_VALUE)
+	public Result rename(@Valid @RequestBody RenameRequestBody renameRequestBody)
+		throws AuthenticationException, UserNotFoundException, ServiceLayerException, ValidationException {
+		contentService.renameContent(renameRequestBody.getSiteId(), renameRequestBody.getPath(), renameRequestBody.getName());
+		var result = new Result();
+		result.setResponse(OK);
+		return result;
+	}
 
-    @GetMapping(value = ITEM_HISTORY)
-    public ResultList<ItemVersion> getHistory(@ValidSiteId @RequestParam(value = REQUEST_PARAM_SITEID) String siteId,
-                                              @ValidExistingContentPath @RequestParam(value = REQUEST_PARAM_PATH) String path) throws ServiceLayerException {
-        ResultList<ItemVersion> result = new ResultList<>();
-        result.setResponse(OK);
-        result.setEntities(RESULT_KEY_ITEMS, contentService.getContentVersionHistory(siteId, path));
+	@GetMapping(value = ITEM_HISTORY)
+	public ResultList<ItemVersion> getHistory(@ValidSiteId @RequestParam(value = REQUEST_PARAM_SITEID) String siteId,
+						  @ValidExistingContentPath @RequestParam(value = REQUEST_PARAM_PATH) String path) throws ServiceLayerException {
+		ResultList<ItemVersion> result = new ResultList<>();
+		result.setResponse(OK);
+		result.setEntities(RESULT_KEY_ITEMS, contentService.getContentVersionHistory(siteId, path));
 
-        return result;
-    }
+		return result;
+	}
 }
